# class-generator

file-generator/: Cargo.toml
file-generator/src/: db.rs  main.rs
templates/: greeting.txt.tera
