[package]
name = "file-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
tiberius = { version = "0.12.3", features = ["chrono", "rust_decimal"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
